<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="scan">Scanner</string>
    <string name="restart">Redemarrer</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="product_name">Nom du produit</string>
    <string name="confirm_product">Confirmer</string>
    <string name="rescan_product">Rescanner</string>
    <string name="cancel_product">Annuler</string>
    <string name="main_instruction">Scanner: scanner un code barre &#10; Redemarrer: redemarrer</string>
    <string name="barcode">Code barre</string>
    <string name="print_product">Imprimer</string>
</resources>
